--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
+    "buefy": "^0.9.10",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
