--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
-    "buefy": "^0.9.10",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "nuxt-buefy": "^0.4.10"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
